[workspace]
resolver = "2"
members  = [
  # prod contracts
  "contracts/address-provider",
  "contracts/account-nft",
  "contracts/credit-manager",
  "contracts/health",
  "contracts/incentives",
  "contracts/oracle/*",
  "contracts/params",
  "contracts/red-bank",
  "contracts/rewards-collector/*",
  "contracts/swapper/*",
  "contracts/v2-zapper/*",

  # mock contracts
  "contracts/mock-credit-manager",
  "contracts/mock-health",
  "contracts/mock-incentives",
  "contracts/mock-oracle",
  "contracts/mock-pyth",
  "contracts/mock-red-bank",
  "contracts/mock-vault",

  # packages
  "packages/chains/*",
  "packages/health",
  "packages/health-computer",
  "packages/interest-rate",
  "packages/liquidation",
  "packages/testing",
  "packages/types",
  "packages/utils",
  "integration-tests",
]

[workspace.package]
version       = "2.0.0"
authors       = [
  "Gabe R. <gabe.r@delphilabs.io>",
  "Larry Engineer <larry@delphidigital.io>",
  "Piotr B. <piotr@delphilabs.io>",
  "Spike Spiegel <spikeonmars@protonmail.com>",
  "Brianna M. <brianna@delphilabs.io>",
  "Ahmad Kaouk",
  "Harry Scholes",
]
edition       = "2021"
license       = "GPL-3.0-or-later"
repository    = "https://github.com/fanfury-sports/red-bank"
homepage      = "https://marsprotocol.io"
documentation = "https://docs.marsprotocol.io/"
keywords      = ["fury", "cosmos", "cosmwasm"]

[workspace.dependencies]
anyhow             = "1.0.75"
astroport          = "2.8.0"
bech32             = "0.9.1"
cosmwasm-schema    = "1.4.0"
cosmwasm-std       = "1.4.0"
cw2                = "1.1.0"
cw721              = { git = "https://github.com/CosmWasm/cw-nfts/", branch = "main" }
cw721-base         = { git = "https://github.com/CosmWasm/cw-nfts/", branch = "main", features = ["library"] }
cw-dex             = { version = "0.3.1", features = ["osmosis"] }
cw-paginate        = "0.2.1"
cw-storage-plus    = "1.1.0"
cw-utils           = "1.0.1"
cw-vault-standard  = { version = "0.3.1", features = ["lockup", "force-unlock"] }
ica-oracle         = { git = "https://github.com/Stride-Labs/ica-oracle", rev = "2fdf76f", features = ["library"] }
itertools          = "0.11.0"
fury-owner         = { version = "2.0.0", features = ["emergency-owner"] }
# Use the latest Github main branch which includes a fix related to protobuf versioning:
# https://github.com/neutron-org/neutron-sdk/commit/ef6351974099bf0d301edf2c689f0c920958331a
neutron-sdk        = { git = "https://github.com/neutron-org/neutron-sdk", rev = "74fea05" }
osmosis-std        = "0.19.2"
prost              = { version = "0.11.9", default-features = false }
pyth-sdk-cw        = "1.2.0"
schemars           = "0.8.12"
serde              = { version = "1.0.188", default-features = false }
serde_json         = "1.0.103"
serde-json-wasm    = "1.0.0"
serde-wasm-bindgen = "0.5.0"
strum              = "0.25.0"
thiserror          = "1.0.48"
tsify              = "0.4.5"
wasm-bindgen       = "0.2.87"

# dev-dependencies
cw-multi-test     = "0.17.0"
cw-it             = "0.2.1"
osmosis-test-tube = "19.2.0"
proptest          = "1.2.0"
test-case         = "3.2.1"

# packages
fury-health                = { path = "./packages/health" }
fury-rover-health-computer = { path = "./packages/health-computer" }
fury-interest-rate         = { path = "./packages/interest-rate" }
fury-liquidation           = { path = "./packages/liquidation" }
fury-osmosis               = { path = "./packages/chains/osmosis" }
# Old rover types used for migration (https://github.com/fanfury-sports/v2-fields-of-fury/releases/tag/v1.0.0)
fury-rover-old             = { package = "fury-rover", git = "https://github.com/fanfury-sports/v2-fields-of-fury", rev = "183e4c5" }
fury-testing               = { path = "./packages/testing" }
fury-types                 = { path = "./packages/types" }
fury-utils                 = { path = "./packages/utils" }

# contracts
fury-account-nft               = { path = "./contracts/account-nft" }
fury-address-provider          = { path = "./contracts/address-provider" }
fury-incentives                = { path = "./contracts/incentives" }
fury-mock-pyth                 = { path = "./contracts/mock-pyth" }
fury-oracle-base               = { path = "./contracts/oracle/base" }
fury-oracle-osmosis            = { path = "./contracts/oracle/osmosis" }
fury-oracle-wasm               = { path = "./contracts/oracle/wasm" }
fury-params                    = { path = "./contracts/params" }
fury-red-bank                  = { path = "./contracts/red-bank" }
fury-rewards-collector-base    = { path = "./contracts/rewards-collector/base" }
fury-rewards-collector-neutron = { path = "./contracts/rewards-collector/neutron" }
fury-rewards-collector-osmosis = { path = "./contracts/rewards-collector/osmosis" }
fury-rover-health              = { path = "./contracts/health" }
fury-swapper-astroport         = { path = "./contracts/swapper/astroport" }
fury-swapper-base              = { path = "./contracts/swapper/base" }
fury-swapper-osmosis           = { path = "./contracts/swapper/osmosis" }
fury-zapper-base               = { path = "./contracts/v2-zapper/base" }

# mocks
fury-mock-credit-manager = { path = "./contracts/mock-credit-manager" }
fury-mock-incentives     = { path = "./contracts/mock-incentives" }
fury-mock-oracle         = { path = "./contracts/mock-oracle" }
fury-mock-red-bank       = { path = "./contracts/mock-red-bank" }
fury-mock-vault          = { path = "./contracts/mock-vault" }
fury-mock-rover-health   = { path = "./contracts/mock-health" }
fury-swapper-mock        = { path = "./contracts/swapper/mock" }
fury-zapper-mock         = { path = "./contracts/v2-zapper/mock" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
