[package]
name          = "fury-integration-tests"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dev-dependencies]
anyhow                         = { workspace = true }
cosmwasm-std                   = { workspace = true }
cw-it                          = { workspace = true, features = ["osmosis-test-tube"] }
cw-multi-test                  = { workspace = true }
ica-oracle                     = { workspace = true }
fury-incentives                = { workspace = true }
fury-oracle-base               = { workspace = true }
fury-oracle-osmosis            = { workspace = true }
fury-osmosis                   = { workspace = true }
fury-params                    = { workspace = true }
fury-red-bank                  = { workspace = true }
fury-rewards-collector-osmosis = { workspace = true }
fury-swapper-osmosis           = { workspace = true }
fury-testing                   = { workspace = true }
fury-types                     = { workspace = true }
fury-utils                     = { workspace = true }
osmosis-std                    = { workspace = true }
osmosis-test-tube              = { workspace = true }
serde                          = { workspace = true }
