[package]
name          = "fury-account-nft"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true }
cw-storage-plus = { workspace = true }
fury-rover-old  = { workspace = true }
fury-types      = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
anyhow                   = { workspace = true }
cw721-base-v16           = { package = "cw721-base", version = "0.16.0" }
cw-multi-test            = { workspace = true }
fury-mock-credit-manager = { workspace = true }
fury-mock-rover-health   = { workspace = true }
fury-owner               = { workspace = true }
serde_json               = { workspace = true }
