[package]
name          = "fury-credit-manager"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw2               = { workspace = true }
cw721             = { workspace = true }
cw721-base        = { workspace = true }
cw-paginate       = { workspace = true }
cw-storage-plus   = { workspace = true }
cw-utils          = { workspace = true }
cw-vault-standard = { workspace = true }
fury-liquidation  = { workspace = true }
fury-owner        = { workspace = true }
fury-types        = { workspace = true }
fury-utils        = { workspace = true }
thiserror         = { workspace = true }

[dev-dependencies]
anyhow                = { workspace = true }
cw-multi-test         = { workspace = true }
itertools             = { workspace = true }
fury-account-nft      = { workspace = true }
fury-address-provider = { workspace = true }
fury-mock-incentives  = { workspace = true }
fury-mock-oracle      = { workspace = true }
fury-mock-red-bank    = { workspace = true }
fury-mock-vault       = { workspace = true }
fury-params           = { workspace = true }
fury-rover-health     = { workspace = true }
fury-swapper-mock     = { workspace = true }
fury-zapper-mock      = { workspace = true }
test-case             = { workspace = true }
