[package]
name          = "fury-rover-health"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema            = { workspace = true }
cosmwasm-std               = { workspace = true }
cw2                        = { workspace = true }
cw-storage-plus            = { workspace = true }
fury-owner                 = { workspace = true }
fury-rover-health-computer = { workspace = true }
fury-types                 = { workspace = true }
thiserror                  = { workspace = true }

[dev-dependencies]
anyhow                   = { workspace = true }
cw-multi-test            = { workspace = true }
cw-utils                 = { workspace = true }
cw-vault-standard        = { workspace = true }
fury-mock-credit-manager = { workspace = true }
fury-mock-oracle         = { workspace = true }
fury-params              = { workspace = true }
fury-mock-vault          = { workspace = true }
