[package]
name          = "mars-red-bank"
description   = "A smart contract that manages asset deposit, borrowing, and liquidations"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw2                = { workspace = true }
cw-storage-plus    = { workspace = true }
cw-utils           = { workspace = true }
fury-health        = { workspace = true }
fury-interest-rate = { workspace = true }
fury-liquidation   = { workspace = true }
fury-owner         = { workspace = true }
fury-types         = { workspace = true }
fury-utils         = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
anyhow        = { workspace = true }
cw-multi-test = { workspace = true }
fury-testing  = { workspace = true }
test-case     = { workspace = true }
