[package]
name          = "fury-oracle-base"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces  = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw-storage-plus = { workspace = true }
fury-owner      = { workspace = true }
fury-utils      = { workspace = true }
fury-types      = { workspace = true }
pyth-sdk-cw     = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
