[package]
name          = "fury-oracle-wasm"
description   = "A smart contract that provides prices for generic CosmWasm chains"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces       = ["cosmwasm-std/backtraces"]
library          = []
osmosis-test-app = ["cw-it/osmosis-test-tube", "fury-testing/osmosis-test-tube"]

[dependencies]
astroport        = { workspace = true }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw2              = { workspace = true }
cw-storage-plus  = { workspace = true }
fury-oracle-base = { workspace = true }
fury-types       = { workspace = true }
pyth-sdk-cw      = { workspace = true }

[dev-dependencies]
cosmwasm-schema  = { workspace = true }
cw-it            = { workspace = true, features = ["astroport", "astroport-multi-test"] }
fury-owner       = { workspace = true }
fury-testing     = { workspace = true, features = ["astroport"] }
proptest         = { workspace = true }
test-case        = { workspace = true }
