[package]
name          = "fury-rewards-collector-neutron"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-std                = { workspace = true, features = ["stargate"] }
cw2                         = { workspace = true }
fury-rewards-collector-base = { workspace = true }
fury-types                  = { workspace = true }
neutron-sdk                 = { workspace = true }
