[package]
name          = "fury-rewards-collector-osmosis"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema             = { workspace = true }
cosmwasm-std                = { workspace = true, features = ["stargate"] }
cw2                         = { workspace = true }
cw-storage-plus             = { workspace = true }
fury-owner                  = { workspace = true }
fury-rewards-collector-base = { workspace = true }
fury-types                  = { workspace = true }

[dev-dependencies]
fury-osmosis = { workspace = true }
fury-owner   = { workspace = true }
fury-testing = { workspace = true }
fury-utils   = { workspace = true }
osmosis-std  = { workspace = true }
serde        = { workspace = true }
