[package]
name          = "fury-swapper-astroport"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces        = ["cosmwasm-std/backtraces"]
default           = []
library           = []
osmosis-test-tube = ["cw-it/osmosis-test-tube", "fury-testing/osmosis-test-tube"]

[dependencies]
astroport         = { workspace = true }
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw2               = { workspace = true }
fury-swapper-base = { workspace = true }
fury-types        = { workspace = true }

[dev-dependencies]
anyhow           = { workspace = true }
cw-it            = { workspace = true, features = ["astroport", "astroport-multi-test"] }
fury-oracle-wasm = { workspace = true }
fury-testing     = { workspace = true, features = ["astroport"] }
test-case        = { workspace = true }
